[package]
name = "linkedin_api_rs"
version = "0.1.0"
description = "App Description"
categories = ["wasm"]
license = "MIT"
readme = "./README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seed = {git  ="https://github.com/seed-rs/seed", branch="master"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.50"
rand = "0.8.4"
urlencoding = "2.1.0"
chrono = { version = "0.4.6", features = ["serde", "wasmbind"] }
[dependencies.web-sys]
version = "0.3.40"
features = [
    "File",
    "Blob",
    "FormData"
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1