[package]
name = "api_test"
version = "0.1.0"
edition = "2021"


[dependencies]
#facebook_api_rs = {path="../facebook-api-rs"}
linkedin_api_rs = {path="../../"}
tokio = { version = "1", features = ["full"] }
awc = { version = "2.0.3", features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
#actix-web = "3"