[package]
name = "linkedin_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seed = {git  ="https://github.com/seed-rs/seed", branch="master"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
linkedin_api_rs = {path="../../"}
wasm-bindgen = "0.2.77"
seed_routing = { git="https://github.com/arn-the-long-beard/seed-routing.git" ,branch ="main" }

[dependencies.web-sys]
version = "0.3.40"
features = [
    "HtmlInputElement",
    "File",
]